--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         build_type: [Release]
         c_compiler: [gcc, clang, cl]
         include:
@@ -30,6 +30,9 @@ jobs:
             c_compiler: gcc
             cpp_compiler: g++
           - os: ubuntu-latest
+            c_compiler: clang
+            cpp_compiler: clang++
+          - os: macos-latest
             c_compiler: clang
             cpp_compiler: clang++
         exclude:
@@ -61,3 +64,4 @@ jobs:
 
       - name: Make Ci_Check
         run: make ci_check
+
