Work on the 1st layer, new license and more

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ repo_url: https://github.com/vuelto-org/vuelto
 docs_dir: "website"
 
 nav:
-  - 🎲 Home: "home.md"
+  - Home: "home.md"
 
   - Getting started:
     - 🚀 Quick start: "get-started.md"
