--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,9 +27,9 @@ nav:
           - 💍 3 Ring approach: "docs/developers/rings.md"
           - 📋 Contribution Guidelines: "docs/developers/contribution.md"
 
-  - Blog: # ✍️
+  - Blog:
       - 📚 Articles: "blog/index.md"
-      - "We’re one year old!": "blog/were-one-year-old.md"
+      - "🎁 We’re one year old!": "blog/were-one-year-old.md"
 
   - Tutorials:
       - 🎓 Home: "tutorials/index.md"
@@ -38,7 +38,7 @@ nav:
       - 🛣️ V1: "roadmap/v1.md"
       - 🛣️ V2: "roadmap/v2.md"
 
-  - Discord: "discord.html"
+  - About: "discord.html"
 
 theme:
   name: material
