--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Vuelto
 site_description: A fast and lightweight game engine powered by Go and OpenGL. Easy, fast and lightweight!
-site_url: https://vuelto.me
+site_url: https://vuelto.pp.ua
 site_author: The Vuelto Team
 copyright: The Vuelto Team
 
