--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,15 +68,15 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: teal
-      accent: indigo
+      primary: white
+      accent: deep-orange # close to vuelto orange
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black
-      accent: indigo
+      accent: indigo # close to vuelto vlue
       toggle:
         icon: material/toggle-switch-off
         name: Switch to system preference
