--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,9 +18,10 @@ nav:
   - Docs:
       - 🏠 Home: "docs/index.md"
       - 👤 User Docs:
-          - 🪟 Windowing: "docs/latest/windowing.md"
-          - 🖥️ Renderer: "docs/latest/renderer.md"
+          - 🖥️ Windowing and Renderer: "docs/latest/window-render.md"
           - 🔊 Audio: "docs/latest/audio.md"
+          - 💡 Events: "docs/latest/events.md"
+          - 🖼 Images: "docs/latest/image.md"
           - 🔢 Vector Math: "docs/latest/vectors.md"
       - 📱 Developer Docs:
           - 💻 Dev Home: "docs/developers/index.md"
