--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,12 @@ nav:
       - 🌱 Beginner:
           - 🚀 Getting Started: "tutorials/beginner/new-project.md"
           - 🎨 Rendering: "tutorials/beginner/rendering.md"
+  - Examples:
+      - 🏠 Home: "examples/index.md"
+      - 📚 Shapes: "examples/1/index.html"
+      - 📚 Images: "examples/2/index.html"
+      - 📚 Combined: "examples/3/index.html"
+
   - Roadmap:
       - 📅 Upcoming: "roadmap/index.md"
       - 🛣️ V1: "roadmap/v1.md"
